--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <a name="home"></a>
         <div class="div1">
             <div class="nav">
-                <img src="C:\Users\fat\Desktop\DAVID\webpage\New folder\webpage\bg.png" class="logo">
+                <img src="bg.png" class="logo">
                 <ul>
                     <a href=#home><li>Home</li></a>
                     <a href=#services><li>Services</li></a>
