update line 30 and 62

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a name="services"></a>
          <div class="div2">
             <div class="nav">
-               <img src="C:\Users\fat\Desktop\DAVID\webpage\New folder\webpage\bg.png" class="logo">
+               <img src="bg.png" class="logo">
                 <ul>
                     <a href=#home><li>Home</li></a>
                     <a href=#services><li>Services</li></a>
@@ -59,7 +59,7 @@
         <a name="about"></a>
         <div class="div3">
             <div class="nav">
-              <img src="C:\Users\fat\Desktop\DAVID\webpage\New folder\webpage\bg.png" class="logo">
+              <img src="bg.png" class="logo">
                 <ul>
                     <a href=#home><li>Home</li></a>
                     <a href=#services><li>Services</li></a>
