--- a/FORM.html
+++ b/FORM.html
@@ -9,7 +9,7 @@
          
              <div class="form">
                  <h2>Booking Form</h2>
-                 <form class="contact" action="index.html" method="post">
+                 <form class="contact" action="homepage.html" method="post">
                      <input type="text" name="name" class="text-box" placeholder="Pet's Name"><br>                
                      <input type="text" name="name" class="text-box" placeholder="Breed"><br>
                      <input type="text" name="name" class="text-box" placeholder="Birthdate"><br>
