--- a/FORM.html
+++ b/FORM.html
@@ -9,7 +9,7 @@
          
              <div class="form">
                  <h2>Booking Form</h2>
-                 <form class="contact" action="homepage.html" method="post">
+                 <form class="contact" action.href="index.html" method="post">
                      <input type="text" name="name" class="text-box" placeholder="Pet's Name"><br>                
                      <input type="text" name="name" class="text-box" placeholder="Breed"><br>
                      <input type="text" name="name" class="text-box" placeholder="Birthdate"><br>
@@ -18,11 +18,8 @@
                      <input type="text" name="name" class="text-box" placeholder="Address"><br>
                      <input type="text" name="name" class="text-box" placeholder="Contact Number"><br>
                     <input type="submit" name="submit" class="submit" value="Submit" formtarget="_self">
+                     <input type="submit" name="back" class="back" value="Go Back" formtarget="_self">
                   </form>
-                  <button onclick="window.location.href='https://index.html';">
-                    Go Back
-                  </button>
-
              </div>
 
         </div>
