--- a/FORM.html
+++ b/FORM.html
@@ -18,8 +18,11 @@
                      <input type="text" name="name" class="text-box" placeholder="Address"><br>
                      <input type="text" name="name" class="text-box" placeholder="Contact Number"><br>
                     <input type="submit" name="submit" class="submit" value="Submit" formtarget="_self">
-                     <input type="submit" name="back" class="back" value="Go Back" formtarget="_self">
+                     
                   </form>
+                  <button onclick="window.location.href='https://index.html';">
+                    Go Back
+                  </button>
              </div>
 
         </div>
