--- a/FORM.html
+++ b/FORM.html
@@ -18,9 +18,9 @@
                      <input type="text" name="name" class="text-box" placeholder="Address"><br>
                      <input type="text" name="name" class="text-box" placeholder="Contact Number"><br>
                     <input type="submit" name="submit" class="submit" value="Submit" formtarget="_self">
-                     
+
                   </form>
-                  <button onclick="window.location.href='https://index.html';">
+                  <button onclick="window.location.href='https:deb2x.github.io/index.html';">
                     Go Back
                   </button>
              </div>
